test/sh/error/func/unexpected_return.sk
f() {
	return 0
}

f()